// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtDialog 测试在 weapp 环境，h5类似 ->  展示：三个按钮模态框 1`] = `
<view
  className="at-dialog at-dialog--active"
  onTouchMove={[Function]}
>
  <view
    className="at-dialog__overlay at-dialog__overlay--active"
    data-testid="at-dialog__overlay"
    onClick={[Function]}
  />
  <view
    className="at-dialog__container at-dialog__container--active"
  >
    <view
      className="at-dialog__wrap"
    >
      <view
        className="at-dialog__header"
      >
        三个按钮模态框
      </view>
      <view
        className="at-dialog__content"
      >
        模块框内容
      </view>
    </view>
    <view
      className="at-dialog__footer at-dialog__footer--column"
    >
      <view
        className="at-dialog__action at-dialog__action--primary"
      >
        主要操作
      </view>
      <view
        className="at-dialog__action at-dialog__action--secondary"
      >
        次要操作
      </view>
      <view
        className="at-dialog__action at-dialog__action--tertiary"
      >
        辅助操作
      </view>
    </view>
  </view>
</view>
`;

exports[`AtDialog 测试在 weapp 环境，h5类似 ->  展示：单个按钮模态框 1`] = `
<view
  className="at-dialog at-dialog--active"
  onTouchMove={[Function]}
>
  <view
    className="at-dialog__overlay at-dialog__overlay--active"
    data-testid="at-dialog__overlay"
    onClick={[Function]}
  />
  <view
    className="at-dialog__container at-dialog__container--active"
  >
    <view
      className="at-dialog__wrap"
    >
      <view
        className="at-dialog__header"
      >
        单个按钮模态框
      </view>
      <view
        className="at-dialog__content"
      >
        模块框内容
      </view>
    </view>
    <view
      className="at-dialog__footer"
    >
      <view
        className="at-dialog__action at-dialog__action--primary"
      >
        主要操作
      </view>
    </view>
  </view>
</view>
`;

exports[`AtDialog 测试在 weapp 环境，h5类似 ->  展示：基础模态框 1`] = `
<view
  className="at-dialog at-dialog--active"
  onTouchMove={[Function]}
>
  <view
    className="at-dialog__overlay at-dialog__overlay--active"
    data-testid="at-dialog__overlay"
    onClick={[Function]}
  />
  <view
    className="at-dialog__container at-dialog__container--active"
  >
    <view
      className="at-dialog__wrap"
    >
      <view
        className="at-dialog__header"
      >
        基础模态框
      </view>
      <view
        className="at-dialog__content"
      >
        模块框内容
      </view>
    </view>
    <view
      className="at-dialog__footer"
    >
      <view
        className="at-dialog__action at-dialog__action--secondary"
      >
        次要操作
      </view>
      <view
        className="at-dialog__action at-dialog__action--primary at-dialog__action--border-left"
      >
        主要操作
      </view>
    </view>
  </view>
</view>
`;

exports[`AtDialog 测试在 weapp 环境，h5类似 ->  展示：无标题时，用户确认的内容，需控制在25字之内 1`] = `
<view
  className="at-dialog at-dialog--active"
  onTouchMove={[Function]}
>
  <view
    className="at-dialog__overlay at-dialog__overlay--active"
    data-testid="at-dialog__overlay"
    onClick={[Function]}
  />
  <view
    className="at-dialog__container at-dialog__container--active"
  >
    <view
      className="at-dialog__wrap"
    >
      <view
        className="at-dialog__header"
      >
        样式使用标题的样式
      </view>
    </view>
    <view
      className="at-dialog__footer"
    >
      <view
        className="at-dialog__action at-dialog__action--primary"
      >
        主要操作
      </view>
    </view>
  </view>
</view>
`;

exports[`AtDialog 测试在 weapp 环境，h5类似 ->  展示：自定义内容模态框 1`] = `
<view
  className="at-dialog at-dialog--active"
  onTouchMove={[Function]}
>
  <view
    className="at-dialog__overlay at-dialog__overlay--active"
    data-testid="at-dialog__overlay"
    onClick={[Function]}
  />
  <view
    className="at-dialog__container at-dialog__container--active"
  >
    <view
      className="at-dialog__wrap"
    >
      <view
        className="at-dialog__header"
      >
        自定义模态框
      </view>
      <view
        className="at-dialog__content"
      >
        这里是正文内容，欢迎加入58安居客。。 这里是正文内容，欢迎加入58安居客。。 这里是正文内容，欢迎加入58安居客。。
      </view>
    </view>
    <view
      className="at-dialog__footer"
    >
      <view
        className="at-dialog__action at-dialog__action--primary"
      >
        主要操作
      </view>
    </view>
  </view>
</view>
`;
